<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".MainActivity">

   <ProgressBar
       android:id="@+id/idPBLoading"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:visibility="visible"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/idRLHome"
        android:visibility="gone"
        >
        <ImageView
            android:id="@+id/idIVBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/black_shade_1"
            android:alpha="0.6"
            />

        <TextView
            android:id="@+id/idTVCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/city_name"
            android:textAlignment="center"
            android:textColor="#FFFF00"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/idTVRegionCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCityName"
            android:text="@string/region_country"
            android:textColor="	#FFFF00"
            android:gravity="center"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/idTVLocalTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVRegionCountry"
            android:text="@string/lt_00_00"
            android:textColor="	#FFFFFF"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="2dp"
            tools:ignore="RtlHardcoded" />


        <LinearLayout
            android:id="@+id/idLLEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/idTVLocalTime"
            android:weightSum="5"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/idTILCity"
                android:layout_margin="10dp"
                android:layout_weight="4.5"
                android:background="@android:color/transparent"
                android:hint="@string/enter_city_name"
                android:padding="5dp"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                >
                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/idEditCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:imeOptions="actionSearch" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/idTVSearch"
                android:layout_width="30dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/idTVTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idLLEdt"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/_23"
            android:textColor="@color/white"
            android:textSize="45sp" />

        <LinearLayout
            android:id="@+id/idLLFeelsLikeAndWindSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVTemperature"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idTVFeelsLike"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="5dp"
                android:text="@string/feels_like"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

            <View
                android:id="@+id/separation"
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:background="#FFFF00" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/idTVWindSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="5dp"
                    android:text="@string/wind_speed"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/idTVHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="5dp"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>




        <ImageView
            android:id="@+id/idIVIcon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_below="@id/idLLFeelsLikeAndWindSpeed"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/idTVCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idIVIcon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/condition"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp"/>

        <Switch
            android:id="@+id/tempSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idTVCondition"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textOff="@string/c"
            android:textOn="@string/f"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/switchLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tempSwitch"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:text="@string/toggle_temp_unit"
            android:textColor="@color/white"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRVWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/idTVweatherForecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/idRVWeather"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/today_s_weather_forecast"
            android:textColor="	#FFFF00"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTVweatherReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/switchLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawablePadding="8dp"
            android:text="@string/weather_report"
            android:textColor="#FFFF00"
            android:textSize="14sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_share_24" />


        <ImageView
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/idTVweatherForecast"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/baseline_logout_24" />


    </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>