<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".SignInActivity">


    <ImageView
        android:id="@+id/image_view"
        android:layout_width="135dp"
        android:layout_height="162dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087"
        app:srcCompat="@drawable/weather" />

    <EditText
        android:id="@+id/emailBox"
        android:textColor="#FFFF00"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textview"
        android:hint="@string/johndoe_gmail_com"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="#FFFF00"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="6dp"
        android:text="@string/password"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailBox"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passwordBox"
        android:textColor="#FFFF00"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textview"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailBox"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Passw0rd123!" />

    <TextView
        android:id="@+id/forgotPasswordtv"
        android:textColor="#FFFF00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/SignInBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/txt_email"
        android:textColor="#FFFF00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/email"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/emailBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        app:layout_constraintVertical_bias="0.939" />


    <Button
        android:id="@+id/SignInBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="184dp"
        android:background="@drawable/button"
        android:text="@string/sign_in"
        android:textColor="#FFFF00"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordBox"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/passwordEye"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:onClick="ShowHidePass"
        app:layout_constraintBottom_toBottomOf="@+id/passwordBox"
        app:layout_constraintEnd_toEndOf="@+id/passwordBox"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="@+id/passwordBox"
        app:layout_constraintTop_toTopOf="@+id/passwordBox"
        app:srcCompat="@drawable/baseline_visibility_24" />

    <TextView
        android:id="@+id/createAcTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="3dp"
        android:padding="10dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="#FFFF00"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignInBtn"
        app:layout_constraintVertical_bias="0.343" />

</androidx.constraintlayout.widget.ConstraintLayout>